# hybrid-rac-stock-forecasting

./: .cursorrules  .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  PROJECT_CONTEXT.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_extensions.py  0002_stock_ohlcv_hypertable.py  0003_pattern_embeddings.py  0004_rac_predictions.py  0005_support_resistance_zones.py  0006_indexes.py  0007_stored_procedures.py  0008_stock_ohlcv_unique_key.py  0009_hnsw_ef_search_in_procs.py
api/: __init__.py  deps.py  etl_jobs.py  main.py  schemas.py
api/routers/: __init__.py  benchmark.py  etl.py  metadata.py  ohlcv.py  rac.py
benchmark/: README.md  __init__.py  chunk_size_bench.py  common.py  hnsw_param_sweep.py  hnsw_vs_seqscan.py  hybrid_search_bench.py  indb_vs_appside.py
db/: __init__.py  seed_small_dataset.py
docker/: Dockerfile
docs/: phase1-infra-db.md
etl/: __init__.py  data_cleaner.py  feature_engineer.py  ingestion.py  pipeline.py  sr_detector.py  tickers_vn100.txt  vnstock_fetcher.py
ml/: __init__.py  cnn_encoder.py  embedding_generator.py  encoder_diagnostics.py  svm_classifier.py  svm_eval.py  train_pipeline.py
rac/: __init__.py  context_enricher.py  explainer.py  query_window.py  rac_classifier.py  retriever.py
streamlit_app/: __init__.py  app.py  session_window.py
streamlit_app/common/: __init__.py  api.py  labels.py  pie.py  window.py
streamlit_app/components/: candlestick.py  similarity.py
streamlit_app/pages/: 1_ohlcv_chart.py  2_similar_patterns.py  3_rac_prediction.py  4_benchmark.py
tests/: conftest.py  test_api.py  test_benchmark_smoke.py  test_etl_smoke.py  test_phase1_db_schema.py  test_phase3_features.py  test_rac_api.py  test_train_pipeline_from_db.py
tests/fixtures/: ohlcv_small.tsv
