[project]
name = "hybrid-rac-stock-forecasting"
version = "0.1.0"
description = "Hybrid stock pattern recognition & forecasting on PostgreSQL (TimescaleDB + pgvector) with Retrieval-Augmented Classification (RAC) for explainable predictions"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.135.3",
    "psycopg-pool>=3.3.0",
    "psycopg[binary]>=3.3.3",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.49",
    "torch>=2.11.0",
    "uvicorn>=0.44.0",
    "vnstock==3.5.1",
]

[dependency-groups]
dev = [
    "anyio>=4.13.0",
    "httpx>=0.28.1",
    "mypy>=1.20.1",
    "pytest>=9.0.3",
    "pytest-anyio>=0.0.0",
    "ruff>=0.15.10",
]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
no_implicit_optional = true
ignore_missing_imports = true
